// SPDX-License-Identifier: AGPL-3.0-only
// Provenance-includes-location: https://github.com/cortexproject/cortex/blob/master/pkg/storegateway/storegatewaypb/gateway.proto
// Provenance-includes-license: Apache-2.0
// Provenance-includes-copyright: The Cortex Authors.

syntax = "proto3";
package gatewaypb;

import "pkg/storegateway/storepb/rpc.proto";

option go_package = "storegatewaypb";

service StoreGateway {
    // Series streams each Series for given label matchers and time range.
    //
    // Series should strictly stream full series after series, optionally split by time. This means that a single frame can contain
    // partition of the single series, but once a new series is started to be streamed it means that no more data will
    // be sent for previous one.
    //
    // Series are sorted.
    rpc Series(thanos.SeriesRequest) returns (stream thanos.SeriesResponse);

    // LabelNames returns all label names that is available.
    rpc LabelNames(thanos.LabelNamesRequest) returns (thanos.LabelNamesResponse);

    // LabelValues returns all label values for given label name.
    rpc LabelValues(thanos.LabelValuesRequest) returns (thanos.LabelValuesResponse);

    // When adding more read-path methods here, please update store_gateway_read_path_routes_regex in operations/mimir-mixin/config.libsonnet as well as needed.
}
